<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ControlActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.31" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_tour"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/program_tour" />

            <Button
                android:id="@+id/button_navigate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.26"
                android:text="@string/program_navigate" />

            <Button
                android:id="@+id/button_inspect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.26"
                android:text="@string/program_inspect" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_shutdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shutdown" />

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />

</LinearLayout>