<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProgramNavigate" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/program_navigate_step_nth"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.26"
            android:ems="10"
            android:hint="Nth"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/program_navigate_direction_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />

            <RadioButton
                android:id="@+id/program_navigate_direction_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button_add_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/program_navigate_add_step" />

    <ListView
        android:id="@+id/program_navigate_steps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.48" >

    </ListView>

    <Button
        android:id="@+id/program_navigate_start_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

</LinearLayout>